# nocap.rs

./: Cargo.toml  flake.nix  rust-toolchain
app/: Cargo.toml
app/nocaprs/: Cargo.toml
app/nocaprs/src/: main.rs
app/src/: main.rs
crates/platform/: Cargo.toml
crates/platform-linux/: Cargo.toml
crates/platform-linux/src/: lib.rs
crates/platform/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
docs/: README.md
nix/: nocap-rs.nix
