[package]
name = "nocap_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nocap_rs"

[dependencies]
eframe = { version = "0.33.2", features = ["wgpu"] }
egui = "0.33.2"
nocaprs_ui = { path = "../../crates/ui/" }
nocaprs_platform = { path = "../../crates/platform/" }
nocaprs_platform_linux = { path = "../../crates/platform-linux/" }
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "registry",
] }
tokio = { version = "1.51.1", features = ["rt", "macros"] }
