[package]
name = "nocaprs_platform_linux"
description = "This implements platform interfaces for linux"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.13.9", features = ["screenshot", "screencast"] }
nocaprs_platform = { path = "../platform/" }
pipewire = "0.9.2"
tracing = "0.1.44"
